# _bazel-legacy-cli-experiment

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  file.json  legacy_cli.bzl  legacy_cli_test.bzl
.github/workflows/: ci.yml  main.yml
src/: legacy_cli.go
